tests/sksl/errors/golden/InvalidOutParams.glsl
### Compilation failed:

error: 1: cannot assign to this expression
error: 5: cannot assign to this expression
error: 6: cannot assign to this expression
3 errors
